--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ts-initial-project",
+  "name": "task-simple-manager",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -13,8 +13,10 @@
     "update-major": "npm version --force --no-git-tag-version major"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
